--- a/svgGraphViewer.html
+++ b/svgGraphViewer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>svgGraphViewer 0.5</title>
+		<title>svgGraphViewer 0.6</title>
 
 		<script>
 			"use strict";
@@ -31,18 +31,22 @@
 					var nodeNames = [],
 					    nodePropertiesStorage = {};
 
+					const shallowCopy = function(source) {
+						return Object.assign({}, source);
+					};
+
 					const addNode = function(newName, newProperties) {
 						newProperties = newProperties || {};
 
 						if (nodePropertiesStorage[newName] === undefined && typeof newProperties === 'object') {
-							nodePropertiesStorage[newName] = newProperties;
+							nodePropertiesStorage[newName] = shallowCopy(newProperties);
 							nodePropertiesStorage[newName]["name"] = newName;
 							nodeNames.push(newName);
 						}
 					}
 
 					const getNode = function(nodeName) {
-						return nodePropertiesStorage[nodeName];
+						return shallowCopy(nodePropertiesStorage[nodeName]);
 					}
 
 					return {
@@ -69,9 +73,38 @@
 					if (testGraph.getNode(nodeName).description !== nodeDescription) {
 						throw new Error("Node properties were modified without proper API call!");
 					}
+
+					testGraph.getNode(nodeName).description = "Maybe NOT A node?";
+					if (testGraph.getNode(nodeName).description !== nodeDescription) {
+						throw new Error("Node properties were modified without proper API call!");
+					}
 				}
 				catch (e) {
 					alert("Adding&Getting API failed!\n" + e);
+					throw e;
+				}
+
+				try {
+					let noException = true;
+
+					try {
+						let testGraph = generateGraphStructure();
+
+						let nodeName = "A";
+						let invalidNodeProperties = {description: {description: "Objects NOT allowed as properties!"}};
+
+						testGraph.addNode(nodeName, invalidNodeProperties);
+					}
+					catch (e) {
+						noException = false;
+					}
+					
+					if (noException) {
+						throw new Error("Node properties validation FAILED!");
+					}
+				}
+				catch (e) {
+					alert("Input validation failed!\n" + e);
 					throw e;
 				}
 
