--- a/svgGraphViewer.html
+++ b/svgGraphViewer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>svgGraphViewer 0.6</title>
+		<title>svgGraphViewer 0.7</title>
 
 		<script>
 			"use strict";
@@ -35,10 +35,24 @@
 						return Object.assign({}, source);
 					};
 
+					const propertiesAreValid = function(properties) {
+						Object.keys(properties).forEach(
+							key => {
+								if (typeof properties[key] === 'object') {
+									throw Error("Only float, string, booleans allowed as properties!!! \n\n\nError with key: "+key+"\nWhole structure: "+JSON.stringify(properties));
+								}
+							}
+						);
+
+						return true;
+					}
+
 					const addNode = function(newName, newProperties) {
 						newProperties = newProperties || {};
 
-						if (nodePropertiesStorage[newName] === undefined && typeof newProperties === 'object') {
+						if (nodePropertiesStorage[newName] === undefined
+							&& typeof newProperties === 'object'
+							&& propertiesAreValid(newProperties)) {
 							nodePropertiesStorage[newName] = shallowCopy(newProperties);
 							nodePropertiesStorage[newName]["name"] = newName;
 							nodeNames.push(newName);
@@ -78,35 +92,56 @@
 					if (testGraph.getNode(nodeName).description !== nodeDescription) {
 						throw new Error("Node properties were modified without proper API call!");
 					}
-				}
-				catch (e) {
-					alert("Adding&Getting API failed!\n" + e);
-					throw e;
-				}
 
-				try {
+					let secondNodeName = "B";
+
+					testGraph.addNode(secondNodeName, undefined);
+					if (testGraph.getNode(secondNodeName).name !== secondNodeName) {
+						throw new Error("Adding Node with empty properties failed!");
+					}
+
+
 					let noException = true;
 
 					try {
-						let testGraph = generateGraphStructure();
-
-						let nodeName = "A";
+						let thirdNodeName = "C";
 						let invalidNodeProperties = {description: {description: "Objects NOT allowed as properties!"}};
 
-						testGraph.addNode(nodeName, invalidNodeProperties);
+						testGraph.addNode(thirdNodeName, invalidNodeProperties);
 					}
 					catch (e) {
 						noException = false;
 					}
 					
 					if (noException) {
-						throw new Error("Node properties validation FAILED!");
+						throw new Error("Node properties validation failed!");
 					}
 				}
 				catch (e) {
-					alert("Input validation failed!\n" + e);
+					alert("Adding&Getting Node API failed!\n" + e);
 					throw e;
 				}
+
+				try {
+					let testGraph = generateGraphStructure();
+
+					let nodeName = "A";
+					let nodeData = {description: "A node"};
+					testGraph.addNode(nodeName, nodeData);
+					if (testGraph.getNodeNames().length !== 1) {
+						throw new Error("Getting node names failed!");
+					}
+
+					testGraph.getNodeNames().push("Improper node adding!");
+					if (testGraph.getNodeNames().length !== 1) {
+						throw new Error("Getting node names encapsulation failed!");
+					}
+				}
+				catch (e) {
+					alert("Getting nodeNames API failed!\n" + e);
+					throw e;
+				}
+
 
 				//module API
 				return {
