--- a/svgGraphViewer.html
+++ b/svgGraphViewer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>svgGraphViewer 0.11</title>
+		<title>svgGraphViewer 0.12</title>
 
 		<script>
 			"use strict";
@@ -518,6 +518,7 @@
 			};
 		</script>
 	</head>
-	<body>
+	<body style="width:100%;  margin: 0;">
+		<svg xmlns="http://www.w3.org/2000/svg" id="svg" style="position:fixed; top:0; left:0; height:100%; width:100% ; user-select: none; -webkit-user-select: none; -moz-user-select: none;"></svg>
 	</body>
 </html>
