--- a/svgGraphViewer.html
+++ b/svgGraphViewer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>svgGraphViewer 0.12</title>
+		<title>svgGraphViewer 0.14</title>
 
 		<script>
 			"use strict";
@@ -512,9 +512,73 @@
 		<script>
 			"use strict";
 
+			const svgHelper = function() {
+				const setSVGAttribute = function(element, name, value) {
+					element.setAttributeNS(null, name, value);
+				}
+
+				const generateSVGElement = function(name, attributes) {
+					var result = document.createElementNS("http://www.w3.org/2000/svg", name);
+
+					if (attributes !== undefined) {
+						Object.keys(attributes).forEach(
+							key => {
+								setSVGAttribute(result, key, attributes[key]);
+							}
+						);
+					}
+
+					return result;
+				}
+
+				//module API
+				return {
+					generateSVGElement
+				}
+			}();
+		</script>
+
+		<script>
+			"use strict";
+
 			window.onload = function () {
 				const graphInstance = coreGraph.generateGraphStructure();
 				alert("This is the first step in simple SVG graph Viewr application!" + "\nData: \n" +JSON.stringify(inputData, null, 4));
+
+				var svgElement = document.querySelector("#svg");
+
+				const firstRect = svgHelper.generateSVGElement(
+					"rect",
+					{
+						fill: "#ccc",
+						x: 50,
+						y: 50,
+						width: 100,
+						height: 40,
+						rx: 15,
+						ry: 15
+					}
+				);
+
+				svgElement.appendChild(firstRect);
+
+
+				var textStyle = "font: 25px Helvetica,sans-serif; text-anchor: middle; user-select: none; -webkit-user-select: none; -moz-user-select: none; cursor: default;";
+
+				var label = svgHelper.generateSVGElement(
+					"text",
+					{
+						style: textStyle,
+						fill: "#222",
+						x: 50+100/2,
+						y: 50+40/2+10
+					}
+				);
+
+				var labelText = document.createTextNode("TEXT");
+				label.appendChild(labelText);
+
+				svgElement.appendChild(label);
 			};
 		</script>
 	</head>
